@@ -133,6 +133,7 @@ DEFINE_ENUM(EMasterReign,
     ((YT_12198_LockTimes)                                           (1408))  // babenko
     ((ShardedTransactions)                                          (1409))  // shakurov
     ((FixErrorDatetime)                                             (1410))  // babenko
+    ((YT_11903_PreserveCreationTimeInMove)                          (1411))  // babenko
 );
 
 ////////////////////////////////////////////////////////////////////////////////
